<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activites.LoginActivity"
    android:background="@color/colorPrimaryDark"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/auth"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/email"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:inputType="textEmailAddress"
        android:layout_below="@id/titulo"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/senha"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:inputType="textPassword"
        android:layout_below="@id/email" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:text="@string/entrar"
        android:layout_below="@id/password"/>



</RelativeLayout>